feat: add links hover style

--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="stylesheet" href="assets/styles/style.index.css">
     <title>Blog | Senai</title>
 </head>
 <body>
-    <h1>Brawhalla</h1>
-    <h3>Um jogo muito estressante, mas legal de se jogar</h3>
+    <header>
+        <div id="logo">
+            <img
+            id="logo-img" src="assets/image/logo.jpg.jpg"
+            alt="imagem do time Real Madrid"/>
+        </div>
+
+        <div id="link">
+            <a href="#home">Home</a>
+            <a href="#main">Principal</a>
+            <a href="#news">Ultimas Noticias</a>
+            <a href="#autor">Autor</a>
+            <a href="#contact">Contato</a>
+        </div>
+    </header>
 </body>
 </html>
