--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="stylesheet" href="assets/styles/style.index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/styles/style.index.css" />
     <title>Blog | Senai</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div id="logo">
-            <img
-            id="logo-img" src="assets/image/logo.jpg.jpg"
-            alt="imagem do time Real Madrid"/>
-        </div>
+      <div id="logo">
+        <img id="logo-img" src="assets/image/R.png" alt="logo cs go" />
+      </div>
 
-        <div id="link">
-            <a href="#home">Home</a>
-            <a href="#main">Principal</a>
-            <a href="#news">Ultimas Noticias</a>
-            <a href="#autor">Autor</a>
-            <a href="#contact">Contato</a>
-        </div>
+      <div id="link">
+        <a href="#home">Home</a>
+        <a href="#main">Principal</a>
+        <a href="#news">Ultimas Noticias</a>
+        <a href="#autor">Autor</a>
+        <a href="#contact">Contato</a>
+      </div>
     </header>
-</body>
+    <div id="carousel">
+      <img
+        src="assets/image/Counter-Strike-Global-Offensive-4K.jpg"
+        alt="Bellingham"
+      />
+    </div>
+    
+    <main>
+      <div id="main-new">
+        <h1>Venha jogar CS GO</h1>
+
+        <div>
+          <span id="author"> Andre Lucca</span>
+          <span id="date"> Publicado em 23 de abril de 2024 </span>
+        </div>
+      </div>
+      <div id="aside"></div>
+    </main>
+  </body>
 </html>
